--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -24,12 +24,12 @@ let links: NavBarLink[] = navBarConfig.links.map(
     <div class="absolute h-8 left-0 right-0 -top-8 bg-[var(--card-bg)] transition"></div> <!-- used for onload animation -->
     <div class:list={[
         className,
-        "card-base !overflow-visible max-w-[var(--page-width)] h-[4.5rem] !rounded-t-none mx-auto flex items-center justify-between px-4"]}>
+        "card-base !overflow-visible w-full h-[4.5rem] !rounded-t-none mx-auto flex items-center justify-between px-4"]}> <!-- replace `max-w-[var(--page-width)]` -> `w-full` -->
         <a href={url('/')} class="btn-plain scale-animation rounded-lg h-[3.25rem] px-5 font-bold active:scale-95">
             <div class="flex flex-row text-[var(--primary)] items-center text-md">
                 <Icon name="material-symbols:home-outline-rounded" class="text-[1.75rem] mb-1 mr-2" />
-                {siteConfig.title}
-            </div>
+                {siteConfig.title}'s Blog
+            </div>  <!-- add `'s Blog` -->
         </a>
         <div class="hidden md:flex">
             {links.map((l) => {
