--- a/src/pages/posts/[...slug].astro
+++ b/src/pages/posts/[...slug].astro
@@ -78,6 +78,8 @@ const jsonLd = {
 
             <!-- *umami.is -->
             <script>
+                setupUmamiCounter();
+
                 // ============ SPA Monitor =============
                 function setupSPAListener(init, update) {
                     // Initialize
