--- a/src/pages/posts/[...slug].astro
+++ b/src/pages/posts/[...slug].astro
@@ -240,6 +240,7 @@ const jsonLd = {
                             console.log('Bye!');
                             const shareIcon = document.getElementById("ico-share");
                             shareLink.innerText = "点击复制链接";
+                            shareText.innerText = "分享本文";
                             shareIcon?.replaceWith(clonedShare);
                         }, 1000)
                     }
