--- a/src/pages/[...page].astro
+++ b/src/pages/[...page].astro
@@ -13,11 +13,12 @@ export const getStaticPaths = (async ({ paginate }) => {
 // https://github.com/withastro/astro/issues/6507#issuecomment-1489916992
 
 const { page } = Astro.props;
+const description = "这里是一个中学生的博客，分享编程、网络等技术的学习笔记，以及我的学习笔记、生活经历、小论文等。"; // *Add description
 
 const len = page.data.length;
 ---
 
-<MainGridLayout>
+<MainGridLayout description={description}> <!-- *Import `description` field -->
     <PostPage page={page}></PostPage>
     <Pagination class="mx-auto onload-animation" page={page} style={`animation-delay: calc(var(--content-delay) + ${(len)*50}ms)`}></Pagination>
 </MainGridLayout>
