--- a/src/components/widget/Profile.astro
+++ b/src/components/widget/Profile.astro
@@ -77,8 +77,8 @@ const config = profileConfig;
             // ========== Umami counter ===========
             function setupUmamiCounter() {
                 const CONFIG = {
-                    UMAMI_SHARE_ID: "SNmJvY36a7hSJoFd",
-                    SITE_ID: "b4b8b3df-8c70-4844-994e-c55280c7e0b9",
+                    UMAMI_SHARE_ID: "BuiGgeembeJzQEsU",
+                    SITE_ID: "9a3d53bd-8ee3-4627-9c07-4f66fd0b4dc9",
                     API_BASE: "https://us.umami.is"
                 };
                 
