--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -129,7 +129,9 @@ const bannerOffset =
 		</script>
 
 		<!-- *Giscus and Umami -->
-		<script src="https://cloud.umami.is/script.js" data-website-id="9a3d53bd-8ee3-4627-9c07-4f66fd0b4dc9"></script>
+		<script src="https://cloud.umami.is/script.js"
+			data-website-id="9a3d53bd-8ee3-4627-9c07-4f66fd0b4dc9"
+			data-domains="blog.shihao.us.kg"></script>
         <script src="https://giscus.app/client.js"
             data-repo="noncoder10/Blogs"
             data-repo-id="R_kgDOPGQhOw"
