--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -132,21 +132,21 @@ const bannerOffset =
 		<script src="https://cloud.umami.is/script.js"
 			data-website-id="9a3d53bd-8ee3-4627-9c07-4f66fd0b4dc9"
 			data-domains="blog.shihao.us.kg"></script>
-        <script src="https://giscus.app/client.js"
-            data-repo="noncoder10/Blogs"
-            data-repo-id="R_kgDOPGQhOw"
-            data-category="Announcements"
-            data-category-id="DIC_kwDOPGQhO84Csa7G"
-            data-mapping="pathname"
-            data-strict="0"
-            data-reactions-enabled="1"
-            data-emit-metadata="0"
-            data-input-position="bottom"
-            data-theme="preferred_color_scheme"
-            data-lang="zh-CN"
-            crossorigin="anonymous"
-            async>
-        </script>
+		<script src="https://giscus.app/client.js"
+			data-repo="nondev10/my-blog"
+			data-repo-id="R_kgDOPIeaJw"
+			data-category="Announcements"
+			data-category-id="DIC_kwDOPIeaJ84Csmgl"
+			data-mapping="pathname"
+			data-strict="0"
+			data-reactions-enabled="1"
+			data-emit-metadata="0"
+			data-input-position="bottom"
+			data-theme="preferred_color_scheme"
+			data-lang="zh-CN"
+			crossorigin="anonymous"
+			async>
+		</script>
 
 		{favicons.map(favicon => (
 			<link rel="icon"
