--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -144,8 +144,7 @@ const bannerOffset =
 			data-input-position="bottom"
 			data-theme="preferred_color_scheme"
 			data-lang="zh-CN"
-			crossorigin="anonymous"
-			async>
+			crossorigin="anonymous">
 		</script>
 
 		{favicons.map(favicon => (
