Fix statistics bug ?)

--- a/src/components/PostCard.astro
+++ b/src/components/PostCard.astro
@@ -131,7 +131,7 @@ const { remarkPluginFrontmatter } = await entry.render();
                     endAt: Date.now(),
                     unit: 'hour',
                     timezone: 'Asia/Hong_Kong',
-                    url: `eq./posts/${slug}/`,
+                    path: `eq./posts/${slug}/`,
                     compare: 'false'
                 });
                 
